--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/supabase-js": "^2.51.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -57,6 +58,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-star-ratings": "^2.3.0",
     "recharts": "2.15.0",
     "resend": "^4.5.2",
     "sonner": "^1.7.1",
@@ -74,6 +76,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-star-ratings": "^2.3.3",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^30.0.0-beta.3",
     "jest": "^29.7.0",
